# Lab_25.4

./: CMakeLists.txt  README.md  SurgerySimulator.cpp  SurgerySimulator.vcxproj  SurgerySimulator.vcxproj.filters
ComputerSimulator/: CMakeLists.txt
ComputerSimulator/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
ComputerSimulator/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
SurgerySimulator/: CMakeLists.txt
SurgerySimulator/include/: surgery_tools.h
SurgerySimulator/src/: SurgerySimulator.cpp
include/: surgery_tools.h
src/: CMakeLists.txt
